This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

25-Jan-2011 (Gnomi)
  - optpat() shouldn't read over the end of the given ed command. (#722)
    (ed.c)
  - Explicit context variables overwrote the types of the closure's
    arguments. (#711)
    (prolang.y)

12-May-2010 (Gnomi)
  - Corrected the call to mysql_options. Use the generic error message
    when mysql returned an empty one.
    (pkg-mysql.c)

04-May-2010 (Fuchur)
  - enable automatic reconnects on MySQL database handles. (see #750)
    (pkg-mysql.c, doc/concepts/mysql, doc/efun[.de]/db_connect[.de])

13-Feb-2010 (Zesstra)
  - Fixed Div-by-Zero in svalue_size().
    svalue_size() divides the memory used for a string by its refcount, but
    0 refs are valid for strings. This leads to a crash in then wiz command
    'dumpallobj', unless the refcount is checked before division. (#725).
    (dumpstat.c)

31-Jan-2010 (Zesstra)
  - Increased UDP receive buffer, because UDP datagrams can be much larger
    than 1024 bytes and the rest of the datagram would be discarded upon
    recvfrom(). Datagram lengths up to 65507 bytes (including UDP and IPv4
    headers: 65535) are supported now.
    (comm.c)
  - Removed dirty BeOS hack. (comm.c)

23-Jan-2010 (Zesstra)
  - get_type_info() failed to reference the function name it returns, causing
    the string to loose refcounts and being eventually free'd erronenously.
    (#712)
    (efuns.c)
  - Removed a potential double free in struct_new_anonymous(). (structs.c)
  - Record a base struct as base struct in a child struct even if the base
    struct has no members. (#695)
    (prolang.y)
  - to_struct() converts a given struct into a struct with the same type as
    the template struct given as optional second argument. (#646)
    This conversion is only done if the template struct is a base of the given
    struct or vice versa. Otherwise an error is raised.
    (efuns.c)